--- a/raon-control/index.html
+++ b/raon-control/index.html
@@ -8,19 +8,24 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width,initial-scale=1.0">
 
-    <div style="height:100px; background-color: dodgerblue; margin: 5px">
-        <p style="text-align:center; font-family:Arial, Helvetica, sans-serif; color:white; font-size: 60px;">
-            Accelerator Control Monitoring</p>
+    <div style="background-color: black; height:60px; margin:10px">
+        <div style="background-color: black; width: 300px; float:left; font-size: 40px; font-family:Arial, Helvetica, sans-serif;">RAON</div>
+        <div id="time-stamp" style="background-color: black; width: 300px; color:white; margin: auto; text-align: center; font-size: 40px; font-family:Arial, Helvetica, sans-serif;"></div>
     </div>
+    
+    <br>
+    <br>
+    <br>
 
     <div class="contents-box">
         <p style="color:white; font-size:20px; text-align:center; font-family:monospace">Temperature</p>
-        <p class="data">26.5&#8451</p>
-        </div>
+        <p class="data" id="scwook1">26.5&#8451</p>
+        <p class="pvname">SYS-SUBSYS:DEV-SUBDEV:SIGNAL</p>
+    </div>
 
     <div class="contents-box">
         <p style="color:white; font-size:20px; text-align:center; font-family:monospace">Humidity</p>
-        <p class="data">50.6%</p>
+        <p class="data" id="scwook2">50.6%</p>
     </div>
 
     <div class="contents-box">
@@ -88,14 +93,15 @@
         }
         
         var dd = [
-            randomScalingFactor(), 
-            randomScalingFactor(), 
-            randomScalingFactor(), 
-            randomScalingFactor(), 
-            randomScalingFactor(), 
-            randomScalingFactor(),
-            randomScalingFactor()
-            ];
+            1,
+            2,
+            5,
+            10,
+            -10,
+            -20,
+            0.0000001
+        ];
+
         var MONTHS = ['January', 'February', 'March', 'April', 'May', 'June', 'July', 'August', 'September', 'October', 'November', 'December'];
         var config = {
             type: 'line',
@@ -154,31 +160,44 @@
                     }]
                 }
             }
-        };
+        }
+
+        function timer() {
+            var d = new Date();
+            document.getElementById('time-stamp').innerHTML = d.toLocaleTimeString('en-GB');
+        }
+
+        function monitoring() {
+
+            var pvList = ["scwook1", "scwook2"];
+            requests = new Array(pvList.length);
+
+            for(let i = 0; i < pvList.length; i++) {
+                requests[i] = new XMLHttpRequest();
+                requests[i].open("GET", pvList[i], true);
+                requests[i].onreadystatechange = function () {
+                    if (this.readyState == 4 && this.status == 200) {
+                        var jsonValue = JSON.parse(requests[i].responseText);
+                        document.getElementById(pvList[i]).innerHTML = jsonValue.value;                  
+                        console.log(pvList[i]);    
+                    }
+                }
+                requests[i].send();
+            }
+
+        }
 
         window.onload = function () {
             var ctx = document.getElementById('canvas').getContext('2d');
             window.myLine = new Chart(ctx, config);
 
             doughnutChart('storage', 86);
-        };
-    </script>
-<!--
-    <script>
-        var myVar = setInterval(loadDoc, 1000);
-        function loadDoc() {
-            var xhttp = new XMLHttpRequest();
-            xhttp.onreadystatechange = function () {
-                if (this.readyState == 4 && this.status == 200) {
-                    var jsonValue = JSON.parse(this.responseText);
-                    document.getElementById("control:temp").innerHTML = "asbd";
-                }
-            };
-            xhttp.open("GET", "scwook", true);
-            xhttp.send();
+            var myVar = setInterval(timer, 1000);
+            var startMonitoring = setInterval(monitoring, 1000);
         }
+
+
     </script>
--->
 </body>
 
 </html>
