--- a/raon-control/test.html
+++ b/raon-control/test.html
@@ -1,166 +1,28 @@
 <!DOCTYPE html>
 <html>
 <link rel="stylesheet" type="text/css" href="test.css">
-<link rel="stylesheet" type="text/css" href="font-awesome.min.css">
 
 <body style="background-color:black">
-	<br><br><br><br><br><br>
-	
-	<div class="search-box">
-		<input type="text" id="input" placeholder="Process Variable">
-		<button type="button" id="button" onclick="loadSearch()">
-			<i class="fa fa-search"></i>
-		</button>
-	</div>
 
-	<br><br><br><br><br><br>
+	<style> 
+		#example2 {
+		  box-sizing: border-box;
+		  width: 300px;
+		  height: 100px;
+		  padding: 20px;  
+		  border: 10px solid blue;
+		  color:white;
+		}
+		</style>
+		</head>
+		<body>
 
-	<table id="retriveData">
-		<tr>
-			<th>PV Name</th>
-			<th>Status</th>
-			<th>Connected</th>
-		</tr>
-		<tr>
-			<td>1</td>
-			<td>2</td>
-			<td>3</td>
-		</tr>
-		<tr>
-			<td>4</td>
-			<td>5</td>
-			<td>6</td>
-		</tr>
-		<tr>
-			<td>7</td>
-			<td>8</td>
-			<td>9</td>
-		</tr>
-	</table>
-</body>
-
+		<div id="example2">Here, the full lkjaskljflkwje;oifkjsdfk avjslk;dfj;lasejfo;iajwe;ofivajnw;eoifj;kjkl;jl;kjl;kjlkh is 300px, no matter what!</div>
+		
 <script>
-	function loadSearch() {
-		var searchText = document.getElementById("input").value;
-		//loadDoc(searchText);
-	}
-
-	var input = document.getElementById("input");
-		input.addEventListener("keyup", function(event) {
-			if (event.keyCode === 13) {
-			event.preventDefault();
-			document.getElementById("button").click();
-		}
-	});
-
-
-	let sortDirection = false;
-	let personData = [
-		{name: 'Dylan', age: 31, a: 31},
-		{name: 'Christopher', age: 30, b: 31},
-		{name: 'Israel', age: 29, c: 31},
-		{name: 'ThugNasty', age: 14, d: 31},
-		{name: 'scwook', age: 31, e: 31},
-	];
-
-	window.onload = () => {
-		//loadTableData(personData);
-		//loadDoc();
-	}
-
-	//loadTableData(personData);
-
-	function loadTableData(tableData) {
-		const tableBody = document.getElementById('tableData');
-		let dataHtml = '';
-
-		for(let person of personData) {
-			dataHtml += `<tr><td>${person.name}</td><td>${person.age}</td></tr>`;
-		}
-
-		console.log(dataHtml)
-		tableBody.innerHTML = dataHtml;
-	}
-
-	function loadDoc(retrievalName) {
-		var xhttp = new XMLHttpRequest();
-		xhttp.onreadystatechange = function() {
-			if (this.readyState == 4 && this.status == 200) {
-				var jsonValue = JSON.parse(this.responseText);
-				
-				var pvData = '';
-				for(var i = 0; i < jsonValue.length; i++) {
-					console.log(jsonValue[i].pvName);
-					pvData += `<tr>
-						<td>${jsonValue[i].pvName}</td>
-						<td>${jsonValue[i].status}</td>
-						<td>${jsonValue[i].connectionState}</td>
-						</tr>`
-
-				}
-
-			}
-
-			document.getElementById("tableData").innerHTML = pvData;
-		};
-		var rName = "http://192.168.68.126:17665/mgmt/bpl/getPVStatus?pv=" + retrievalName;
-		console.log(rName);
-		xhttp.open("GET", rName, true);
-		xhttp.send();
-	}
-
-/*
-		// Create the XHR object.
-	function createCORSRequest(method, url) {
-		var xhr = new XMLHttpRequest();
-		if ("withCredentials" in xhr) {
-			// XHR for Chrome/Firefox/Opera/Safari.
-			xhr.open(method, url, true);
-		} else if (typeof XDomainRequest != "undefined") {
-			// XDomainRequest for IE.
-			xhr = new XDomainRequest();
-			xhr.open(method, url);
-		} else {
-			// CORS not supported.
-			xhr = null;
-		}
-		return xhr;
-	}
-
-		// Helper method to parse the title tag from the response.
-	function getTitle(text) {
-		return text.match('<title>(.*)?</title>')[1];
-	}
-
-		// Make the actual CORS request.
-	function makeCorsRequest() {
-		// This is a sample server that supports CORS.
-		var url = 'http://localhost:17665/mgmt/bpl/getPVStatus?pv=*';
-
-		var xhr = createCORSRequest('GET', url);
-		if (!xhr) {
-			alert('CORS not supported');
-			return;
-		}
-
-		// Response handlers.
-		xhr.onload = function() {
-			var text = xhr.responseText;
-			var title = getTitle(text);
-			alert('Response from CORS request to ' + url + ': ' + title);
-		};
-
-		xhr.onerror = function() {
-				alert('Woops, there was an error making the request.');
-		};
-
-		xhr.send();
-	}
-*/
-
-
 
 </script>
 
+</body>
 
 </html>
