--- a/raon-control/test.html
+++ b/raon-control/test.html
@@ -4,21 +4,50 @@
 
 <body style="background-color:black">
 
-	<style> 
-		#example2 {
-		  box-sizing: border-box;
-		  width: 300px;
-		  height: 100px;
-		  padding: 20px;  
-		  border: 10px solid blue;
-		  color:white;
-		}
-		</style>
-		</head>
-		<body>
+<style> 
+	.member-box {
+		width: 800px;
+		height: 300px;
+		background-color: dodgerblue;
+		padding: 5px;
+	}
 
-		<div id="example2">Here, the full lkjaskljflkwje;oifkjsdfk avjslk;dfj;lasejfo;iajwe;ofivajnw;eoifj;kjkl;jl;kjl;kjlkh is 300px, no matter what!</div>
-		
+	.avatar {
+		width: 100px;
+		height: 100px;
+		background-color: red;
+		color: white;
+		display: inline-block;
+	}
+
+	.member-info {
+		width: 400px;
+		height: 100px;
+		background-color: green;
+		color: white;
+		display: inline-block;
+	}
+
+	.member-work {
+		width: 504px;
+		height: 150px;
+		background-color: #1d1d1d;
+		color: white;
+	}
+</style>
+
+	<div class="member-box">
+		<div class="avatar">
+
+		</div>
+		<div class="member-info">
+
+		</div>
+		<div class="member-work">
+
+		</div>
+	</div>
+<body>		
 <script>
 
 </script>
